1st version of rebalancer for 4 coins

--- a/Rebalance.ipynb
+++ b/Rebalance.ipynb
@@ -12,7 +12,6 @@
     "import pandas as pd\n",
     "import collections\n",
     "\n",
-    "\n",
     "file = \"C:/Users/Carter Carlson/Documents/Excel references/secret.csv\"\n",
     "api = pd.read_csv(file)\n",
     "\n",
@@ -52,179 +51,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>symbol</th>\n",
-       "      <th>quantity</th>\n",
-       "      <th>price</th>\n",
-       "      <th>dollar_value</th>\n",
-       "      <th>weight</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>BTC</td>\n",
-       "      <td>0.227508</td>\n",
-       "      <td>8190.730000</td>\n",
-       "      <td>1863.456355</td>\n",
-       "      <td>0.206339</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ETH</td>\n",
-       "      <td>5.226496</td>\n",
-       "      <td>455.273536</td>\n",
-       "      <td>2379.485417</td>\n",
-       "      <td>0.263479</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>XRP</td>\n",
-       "      <td>7722.869000</td>\n",
-       "      <td>0.446477</td>\n",
-       "      <td>3448.081006</td>\n",
-       "      <td>0.381804</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  symbol     quantity        price  dollar_value    weight\n",
-       "0    BTC     0.227508  8190.730000   1863.456355  0.206339\n",
-       "1    ETH     5.226496   455.273536   2379.485417  0.263479\n",
-       "2    XRP  7722.869000     0.446477   3448.081006  0.381804"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# test here for nonexistent ticker\n",
+    "try:\n",
+    "    binance.fetch_ticker('BTC/XRP')['info']['lastPrice']\n",
+    "    print('A works')\n",
+    "except:\n",
+    "    binance.fetch_ticker('XRP/BTC')['info']['lastPrice']\n",
+    "    print('B works')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['weight'] = list(map(lambda x: x / total_value, data['dollar_value']))\n",
     "data[data['weight'] > .2]\n",
-    "# list of all weights\n",
-    "# of that, only weights above 30% remain\n",
-    "# get min weight\n",
-    "# figure it out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "symbol = 'XRP/ETH'\n",
-    "type = 'market'\n",
-    "price = None\n",
     "\n",
-    "diff = abs(xrpWeight - ethWeight)\n",
-    "if diff > .01:\n",
-    "    if xrpWeight > ethWeight:\n",
-    "        side = 'sell'\n",
-    "    else:\n",
-    "        side = 'buy'\n",
-    "    # Have to account for fees\n",
-    "    rate = diff / 2 + diff * .01\n",
-    "    cashAmount = rate * totalValue\n",
-    "    amount = cashAmount / xrpTicker\n",
+    "index_max = data['weight'].index(max(data['weight']))\n",
+    "index_min = data['weight'].index(min(data['weight']))\n",
     "\n",
-    "    #print(binance.create_order(symbol, type, side, amount))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "balance = binance.fetchBalance()\n",
-    "ethBalance = balance['ETH']['free']\n",
-    "xrpBalance = balance['XRP']['free']\n",
-    "\n",
-    "ethValue = ethTicker * ethBalance\n",
-    "xrpValue = xrpTicker * xrpBalance\n",
-    "\n",
-    "totalValue = ethValue + xrpValue\n",
-    "ethWeight = ethValue / totalValue\n",
-    "xrpWeight = xrpValue / totalValue\n",
-    "print('ETH weight: ' + str(ethWeight) + '\\nXRP weight: ' + str(xrpWeight))\n",
-    "print('ETH value: ' + str(ethValue) + '\\nXRP value: ' + str(xrpValue))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# note: dynamically add coins using binance.balance()\n",
-    "# Check if we need more BNB for transaction fees\n",
-    "bnb_quantity = balance['BNB']['total']\n",
-    "\n",
-    "if bnb_quantity < 1:\n",
-    "    max_val = 0\n",
-    "    # find coin used to buy more BNB\n",
-    "    for item in data.items():\n",
-    "        if item[1]['dollar_value'] > max_val and item[0] != 'OMG' and item[0] != 'XRP':\n",
-    "            max_val = item[1]['dollar_value']\n",
-    "            coin_for_bnb = item[0]\n",
-    "            # Note: figure how to trade - BNB/BTC and BNB/ETH, but XRP/BNB"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Old, entertaining(and sometimes confusing?) code\n",
-    "coins = ['BTC', 'ETH', 'XRP', 'OMG']\n",
-    "data = collections.defaultdict(dict)\n",
-    "total_value = 0\n",
-    "---------\n",
-    "for coin in coins:\n",
-    "    # Quantity of coin\n",
-    "    data[coin]['quantity'] = balance[coin]['total']\n",
-    "    btc_price = float(binance.fetch_ticker('BTC/USDT')['info']['lastPrice'])\n",
-    "    # Price of coin (converted from BTC to $)\n",
-    "    if coin == 'BTC':\n",
-    "        data[coin]['price'] = btc_price\n",
-    "    else:\n",
-    "        btc_ratio = float(binance.fetch_ticker(coin + '/BTC')['info']['lastPrice'])\n",
-    "        data[coin]['price'] = btc_ratio * btc_price\n",
+    "if data['weight'][index_max] - data['weight'][index_min] > .05:\n",
+    "    weight_to_sell = (data['weight'][index_max] - data['weight'][index_min]) / 2\n",
     "    \n",
-    "    # Dollar value \n",
-    "    data[coin]['dollar_value'] = data[coin]['quantity'] * data[coin]['price']\n",
-    "    total_value += data[coin]['dollar_value']\n",
+    "  \n",
+    "    try:\n",
+    "        side = 'sell'\n",
+    "        test_ticker = data['symbol'][index_max] + '/' + data['symbol'][index_min]\n",
+    "        selling_coin_quantity = (weight_to_sell * total_value) / data['price'][index_max]\n",
+    "        # note: if fails at selling_coin_quantity, move test_price outside try\n",
+    "        test_price = float(binance.fetch_ticker(test_ticker)['info']['lastPrice'])\n",
     "\n",
-    "# Add relative weight of coins\n",
-    "data[coin]['weight'] = [data[coin]['dollar_value'] / total_value for coin in coins]\n",
-    "-----------"
+    "    except:\n",
+    "        side = 'buy'\n",
+    "        test_ticker = data['symbol'][index_min] + '/' + data['symbol'][index_max]\n",
+    "        selling_coin_quantity = weight to sell * total_value / data['price'][index_min]\n",
+    "\n",
+    "        test_price = float(binance.fetch_ticker(test_ticker)['info']['lastPrice'])\n",
+    "        \n",
+    "    binance.create_order(test_ticker, 'market', side, selling_coin_quantity)\n",
+    "\n",
+    "# Note: see difference between using market or limit orders-\n",
+    "#     a. Does limit have automatic setting?\n",
+    "#     b. Different fees for limit or market?\n",
+    "#     c. What happens if limit doesn't fill"
    ]
   }
  ],
