--- a/Rebalance.ipynb
+++ b/Rebalance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_order(coin1, coin2):\n",
+    "def rebalance_order(coin1, coin2):\n",
     "    try:\n",
     "        binance.fetch_ticker(coin1 + '/' + coin2)['info']\n",
     "        return coin1 + '/' + coin2, 'sell'\n",
@@ -61,9 +61,30 @@
     "        try:\n",
     "            binance.fetch_ticker(coin2 + '/' + coin1)['info']\n",
     "            return coin2 + '/' + coin1, 'buy'\n",
+    "        except:            \n",
+    "            return coin1 + '/BTC', 'sell', coin2 + '/BTC', 'buy' # Note: could coin2 be 'BTC/' + coin/sell?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bnb_order(coin):\n",
+    "    # Note: is buy/sell correct?\n",
+    "    if balance['bnb']['total'] < 1:\n",
+    "        return\n",
+    "    try:\n",
+    "        ratio = binance.fetch_ticker(coin + '/BNB')['info']\n",
+    "        binance.create_order(coin + '/BNB', 'market', 'sell', quantity???)\n",
+    "    except:\n",
+    "        try:\n",
+    "            ratio = binance.fetch_ticker('BNB/' + coin)['info']\n",
+    "            binance.create_order('BNB/' + coin, 'market', 'buy???', quantity???)\n",
     "        except:\n",
-    "            # Note: is sell/buy in correct order to sell heavy coin using XRP/BTC? or should sell/buy be switched\n",
-    "            return coin1 + '/BTC', 'sell', coin2 + '/BTC', 'buy'"
+    "            binance.create_order(coin + '/BTC', 'market', 'sell', quantity?) # get bnb to btc ratio? or coin/btc ratio?\n",
+    "            binance.create_order(?) # use BNB/BTC"
    ]
   },
   {
@@ -75,65 +96,23 @@
     "coins = ['BTC', 'ETH', 'XRP', 'OMG']\n",
     "n = 1/len(coins)\n",
     "thresh = .2 # percentage above average weight to trigger rebalance\n",
-    "\n",
     "data = update_coin_data(coins)\n",
     "\n",
+    "# Rebalance coins\n",
     "while not data[data['weight'] > (n + thresh * n)].empty:\n",
-    "    \n",
-    "    order = get_order(data['symbol'][0], data['symbol'][len(data) - 1])\n",
+    "    order = rebalance_order(data['symbol'][0], data['symbol'][len(data) - 1])\n",
     "    total_value = data['dollar_value'].sum()\n",
     "    weight_to_move = (data['weight'][0] - data['weight'][len(data) - 1]) / 2\n",
     "    quantity = round(weight_to_move * total_value / data[data['symbol'] == order[0][:3]]['price'].values[0], 5)\n",
-    "    \n",
     "    binance.create_order(order[0], 'market', order[1], quantity)\n",
     "    \n",
     "    if len(order) > 2:\n",
     "        quantity = round(weight_to_move * total_value / data[data['symbol'] == order[2][:3]]['price'].values[0], 5)\n",
+    "        binance.create_order(order[2], 'market', order[3], quantity)\n",
     "        \n",
-    "        binance.create_order(order[2], 'market', order[3], quantity)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_coins_over = len(data[data['weight'] > .3])\n",
-    "\n",
-    "for i in range(num_coins_over):\n",
-    "    order = get_order(data['symbol'][i], data['symbol'][len(data) - 1])\n",
-    "    \n",
-    "    weight_to_sell = (data['weight'][i] - data['weight'].min()) / 2 # note: issue if two coins have same min?\n",
-    "    quantity = round(weight_to_sell * total_value / data[data['symbol'] == order[0][:3]]['price'].values[0], 5)\n",
-    "\n",
-    "    print(order[0], order[1], quantity)\n",
-    "    #binance.create_order(order[0], 'market', order[1], quantity)\n",
-    "    \n",
-    "    if len(order) > 2:\n",
-    "        quantity = round(weight_to_sell * total_value / data[data['symbol'] == order[2][:3]]['price'].values[0], 5)\n",
-    "        \n",
-    "        print(order[2], order[3], quantity)   \n",
-    "        #binance.create_order(order[2], 'market', order[3], quantity)\n",
-    "data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "binance = ccxt.binance()\n",
-    "total_value = 10000\n",
-    "data = {'symbol':['BTC', 'ETH', 'XRP', 'OMG'],\n",
-    "        'quantity':[0.22751, 5.25, 7722, 200], \n",
-    "        'price': [7688, 431.86, .431, 6.058],\n",
-    "        'dollar_value': [1749, 2268, 3331, 1211],\n",
-    "        'weight': [.204, .265, .389, .142]}\n",
-    "        #'weight': [.204, .265, .389, .142]}\n",
-    "data = pd.DataFrame(data)\n",
-    "data = data.sort_values(by='weight', ascending=False).reset_index(drop=True)"
+    "# rebalance bnb\n",
+    "bnb_order(data['symbol'][0])\n",
+    "    "
    ]
   },
   {
@@ -144,8 +123,11 @@
     "1. 4 coins all 25%\n",
     "2. Top coin goes to 35%, bottom two go to 22.5 and 17.5\n",
     "3. Best to...\n",
+    "\n",
     "    a. take half of 10% gained, move the 5% to 17.5\n",
+    "    \n",
     "    b. move all 10% gained to 17.5\n",
+    "    \n",
     "    c. move 7.5 gained to 17.5, 2.5 to 22.5\n",
     "    \n"
    ]
