Successfully rebalanced 4 coins

--- a/Rebalance.ipynb
+++ b/Rebalance.ipynb
@@ -14,21 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "def update_coin_data(coins):\n",
-    "    file = \"\" # fill this\n",
-    "    api = pd.read_csv(file)\n",
-    "    binance = ccxt.binance({\n",
+    "    exchange = ccxt.binance({\n",
     "        'options': {'adjustForTimeDifference': True},\n",
     "        'apiKey': api['apiKey'][0],\n",
     "        'secret': api['secret'][0]\n",
     "    })\n",
-    "    \n",
-    "    balance = binance.fetchBalance()    \n",
-    "    btc_price = float(binance.fetch_ticker('BTC/USDT')['info']['lastPrice'])\n",
+    "    balance = exchange.fetchBalance()\n",
+    "    btc_price = float(exchange.fetch_ticker('BTC/USDT')['info']['lastPrice'])\n",
     "    df = pd.DataFrame(columns=['symbol', 'quantity', 'price', 'dollar_value'])\n",
     "    \n",
     "    for coin in coins:\n",
@@ -36,7 +33,7 @@
     "        if coin == 'BTC':\n",
     "            price = btc_price\n",
     "        else:\n",
-    "            btc_ratio = float(binance.fetch_ticker(coin + '/BTC')['info']['lastPrice'])\n",
+    "            btc_ratio = float(exchange.fetch_ticker(coin + '/BTC')['info']['lastPrice'])\n",
     "            price = btc_ratio * btc_price\n",
     "        \n",
     "        dollar_value = quantity * price\n",
@@ -49,20 +46,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "def rebalance_order(coin1, coin2):\n",
     "    try:\n",
-    "        binance.fetch_ticker(coin1 + '/' + coin2)['info']\n",
+    "        exchange.fetch_ticker(coin1 + '/' + coin2)['info']\n",
     "        return coin1 + '/' + coin2, 'sell'\n",
     "    except:\n",
     "        try:\n",
-    "            binance.fetch_ticker(coin2 + '/' + coin1)['info']\n",
+    "            exchange.fetch_ticker(coin2 + '/' + coin1)['info']\n",
     "            return coin2 + '/' + coin1, 'buy'\n",
     "        except:            \n",
     "            return coin1 + '/BTC', 'sell', coin2 + '/BTC', 'buy' # Note: could coin2 be 'BTC/' + coin/sell?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0035813872202122747"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "usd_val = float(exchange.fetch_ticker('BNB/USDT')['info']['lastPrice']) * 2\n",
+    "usd_val / float(exchange.fetch_ticker('BTC/USDT')['info']['lastPrice'])"
    ]
   },
   {
@@ -72,47 +90,71 @@
    "outputs": [],
    "source": [
     "def bnb_order(coin):\n",
-    "    # Note: is buy/sell correct?\n",
+    "\n",
     "    if balance['bnb']['total'] < 1:\n",
     "        return\n",
-    "    try:\n",
-    "        ratio = binance.fetch_ticker(coin + '/BNB')['info']\n",
-    "        binance.create_order(coin + '/BNB', 'market', 'sell', quantity???)\n",
-    "    except:\n",
-    "        try:\n",
-    "            ratio = binance.fetch_ticker('BNB/' + coin)['info']\n",
-    "            binance.create_order('BNB/' + coin, 'market', 'buy???', quantity???)\n",
-    "        except:\n",
-    "            binance.create_order(coin + '/BTC', 'market', 'sell', quantity?) # get bnb to btc ratio? or coin/btc ratio?\n",
-    "            binance.create_order(?) # use BNB/BTC"
+    "    if coin != 'BTC':\n",
+    "        # get bnb price\n",
+    "        # sell coin equivalent to 2*bnb_price to btc\n",
+    "        \n",
+    "    exchange.create_order('BNB/BTC', 'market', 'buy', 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 84,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  symbol     quantity        price  dollar_value    weight\n",
+      "0    XRP  4064.319000     0.447084   1817.093215  0.262441\n",
+      "1    OMG   305.030000     5.944250   1813.174577  0.261875\n",
+      "2    ETH     4.005586   422.670690   1693.043634  0.244525\n",
+      "3    BTC     0.208670  7670.000000   1600.496906  0.231158\n"
+     ]
+    }
+   ],
    "source": [
-    "coins = ['BTC', 'ETH', 'XRP', 'OMG']\n",
+    "file = \"C:/Users/Carter Carlson/Documents/Excel References/secret.csv\"\n",
+    "api = pd.read_csv(file)\n",
+    "\n",
+    "coins = []\n",
+    "for asset in balance['info']['balances']:\n",
+    "    if float(asset['free']) > 0:\n",
+    "        coins.append(asset['asset'])\n",
+    "coins.remove('BNB')\n",
+    "\n",
     "n = 1/len(coins)\n",
     "thresh = .2 # percentage above average weight to trigger rebalance\n",
     "data = update_coin_data(coins)\n",
-    "\n",
-    "# Rebalance coins\n",
+    "print(data)\n",
+    "i = 1\n",
     "while not data[data['weight'] > (n + thresh * n)].empty:\n",
+    "    exchange = ccxt.binance({\n",
+    "        'options': {'adjustForTimeDifference': True},\n",
+    "        'apiKey': api['apiKey'][0],\n",
+    "        'secret': api['secret'][0]\n",
+    "    })\n",
+    "    \n",
     "    order = rebalance_order(data['symbol'][0], data['symbol'][len(data) - 1])\n",
     "    total_value = data['dollar_value'].sum()\n",
     "    weight_to_move = (data['weight'][0] - data['weight'][len(data) - 1]) / 2\n",
     "    quantity = round(weight_to_move * total_value / data[data['symbol'] == order[0][:3]]['price'].values[0], 5)\n",
-    "    binance.create_order(order[0], 'market', order[1], quantity)\n",
+    "    print(order[0], order[1], quantity)\n",
+    "    exchange.create_order(order[0], 'market', order[1], quantity)\n",
     "    \n",
     "    if len(order) > 2:\n",
     "        quantity = round(weight_to_move * total_value / data[data['symbol'] == order[2][:3]]['price'].values[0], 5)\n",
-    "        binance.create_order(order[2], 'market', order[3], quantity)\n",
-    "        \n",
-    "# rebalance bnb\n",
-    "bnb_order(data['symbol'][0])\n",
-    "    "
+    "        exchange.create_order(order[2], 'market', order[3], quantity)\n",
+    "    \n",
+    "    data = update_coin_data(coins)\n",
+    "    print('Balance after trade ', i, '\\n', data)\n",
+    "    i += 1"
    ]
   },
   {
@@ -120,17 +162,25 @@
    "metadata": {},
    "source": [
     "math proof-\n",
-    "1. 4 coins all 25%\n",
-    "2. Top coin goes to 35%, bottom two go to 22.5 and 17.5\n",
-    "3. Best to...\n",
+    "*  4 coins all 25%\n",
+    "\n",
+    "1. Top coin goes to 35%, bottom two go to 22.5 and 17.5\n",
     "\n",
     "    a. take half of 10% gained, move the 5% to 17.5\n",
     "    \n",
     "    b. move all 10% gained to 17.5\n",
     "    \n",
     "    c. move 7.5 gained to 17.5, 2.5 to 22.5\n",
-    "    \n"
+    "    \n",
+    "2. Top coin is a certain % more weight than bottom coin\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
