--- a/Rebalance.ipynb
+++ b/Rebalance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,47 +64,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0035813872202122747"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "usd_val = float(exchange.fetch_ticker('BNB/USDT')['info']['lastPrice']) * 2\n",
-    "usd_val / float(exchange.fetch_ticker('BTC/USDT')['info']['lastPrice'])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def bnb_order(coin):\n",
-    "\n",
-    "    if balance['bnb']['total'] < 1:\n",
+    "    # buy 2 BNB for lower transaction fees if we have less than 1 BNB\n",
+    "    # uses coin with largest value in portfolio\n",
+    "    if balance['BNB']['total'] < 1:\n",
     "        return\n",
     "    if coin != 'BTC':\n",
-    "        # get bnb price\n",
-    "        # sell coin equivalent to 2*bnb_price to btc\n",
+    "        bnb_btc = 2 * float(exchange.fetch_ticker('BNB/BTC')['info']['lastPrice'])\n",
+    "        coin_btc = float(exchange.fetch_ticker(coin + '/BTC')['info']['lastPrice'])\n",
+    "        quantity = bnb_btc / coin_btc\n",
+    "        exchange.create_order(coin + '/BTC', 'market', 'sell', quantity)\n",
     "        \n",
-    "    exchange.create_order('BNB/BTC', 'market', 'buy', 2)"
+    "    exchange.create_order('BNB/BTC', 'market', 'buy', 2)\n",
+    "    print(\"Purchased 2 BNB with {:0.3f} {}\".format(quantity, coin))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 84,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -130,11 +113,14 @@
     "coins.remove('BNB')\n",
     "\n",
     "n = 1/len(coins)\n",
-    "thresh = .2 # percentage above average weight to trigger rebalance\n",
+    "thresh = .2\n",
+    "\n",
     "data = update_coin_data(coins)\n",
-    "print(data)\n",
+    "#bnb_order(data['symbol'][0])\n",
+    "\n",
     "i = 1\n",
-    "while not data[data['weight'] > (n + thresh * n)].empty:\n",
+    "while data['weight'][0] - data['weight'][len(data) - 1] > 2 * n * thresh:\n",
+    "#while not data[data['weight'] > (n + thresh * n)].empty:\n",
     "    exchange = ccxt.binance({\n",
     "        'options': {'adjustForTimeDifference': True},\n",
     "        'apiKey': api['apiKey'][0],\n",
@@ -145,16 +131,36 @@
     "    total_value = data['dollar_value'].sum()\n",
     "    weight_to_move = (data['weight'][0] - data['weight'][len(data) - 1]) / 2\n",
     "    quantity = round(weight_to_move * total_value / data[data['symbol'] == order[0][:3]]['price'].values[0], 5)\n",
-    "    print(order[0], order[1], quantity)\n",
     "    exchange.create_order(order[0], 'market', order[1], quantity)\n",
+    "    print(order[0], order[1], quantity)\n",
     "    \n",
     "    if len(order) > 2:\n",
     "        quantity = round(weight_to_move * total_value / data[data['symbol'] == order[2][:3]]['price'].values[0], 5)\n",
     "        exchange.create_order(order[2], 'market', order[3], quantity)\n",
+    "        print(order[2], order[3], quantity)\n",
     "    \n",
     "    data = update_coin_data(coins)\n",
-    "    print('Balance after trade ', i, '\\n', data)\n",
-    "    i += 1"
+    "    print('Balance after rebalance #', i, '\\n', data)\n",
+    "    i += 1\n",
+    "    if i == 5:\n",
+    "        break\n",
+    "\n",
+    "# Note: base rebalancing on sdev instead of baseline %?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "8/2/2018\n",
+    "\n",
+    "symbol     quantity        price  dollar_value    weight\n",
+    "0    XRP  4064.319000     0.447084   1817.093215  0.262441\n",
+    "1    OMG   305.030000     5.944250   1813.174577  0.261875\n",
+    "2    ETH     4.005586   422.670690   1693.043634  0.244525\n",
+    "3    BTC     0.208670  7670.000000   1600.496906  0.231158"
    ]
   },
   {
@@ -174,13 +180,6 @@
     "    \n",
     "2. Top coin is a certain % more weight than bottom coin\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
