--- a/Rebalance.ipynb
+++ b/Rebalance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,17 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def update_coin_data(coins):\n",
-    "    exchange = ccxt.binance({\n",
-    "        'options': {'adjustForTimeDifference': True},\n",
-    "        'apiKey': api['apiKey'][0],\n",
-    "        'secret': api['secret'][0]\n",
-    "    })\n",
-    "    balance = exchange.fetchBalance()\n",
+    "def update_data(coins):\n",
     "    btc_price = float(exchange.fetch_ticker('BTC/USDT')['info']['lastPrice'])\n",
     "    df = pd.DataFrame(columns=['symbol', 'quantity', 'price', 'dollar_value'])\n",
     "    \n",
@@ -46,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,13 +58,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def bnb_order(coin):\n",
-    "    # buy 2 BNB for lower transaction fees if we have less than 1 BNB\n",
-    "    # uses coin with largest value in portfolio\n",
     "    if balance['BNB']['total'] < 1:\n",
     "        return\n",
     "    if coin != 'BTC':\n",
@@ -85,100 +77,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  symbol     quantity        price  dollar_value    weight\n",
-      "0    XRP  4064.319000     0.447084   1817.093215  0.262441\n",
-      "1    OMG   305.030000     5.944250   1813.174577  0.261875\n",
-      "2    ETH     4.005586   422.670690   1693.043634  0.244525\n",
-      "3    BTC     0.208670  7670.000000   1600.496906  0.231158\n"
-     ]
-    }
-   ],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "file = \"C:/Users/Carter Carlson/Documents/Excel References/secret.csv\"\n",
     "api = pd.read_csv(file)\n",
-    "\n",
+    "exchange = ccxt.binance({'options': {'adjustForTimeDifference': True},'apiKey': api['apiKey'][0],'secret': api['secret'][0]}) \n",
+    "balance = exchange.fetchBalance()\n",
     "coins = []\n",
-    "for asset in balance['info']['balances']:\n",
-    "    if float(asset['free']) > 0:\n",
-    "        coins.append(asset['asset'])\n",
-    "coins.remove('BNB')\n",
+    "[coins.append(asset['asset']) for asset in balance['info']['balances'] if float(asset['free']) > 0]\n",
     "\n",
+    "data = update_data(coins)\n",
+    "        \n",
     "n = 1/len(coins)\n",
-    "thresh = .2\n",
-    "\n",
-    "data = update_coin_data(coins)\n",
-    "#bnb_order(data['symbol'][0])\n",
-    "\n",
+    "thresh = .1\n",
     "i = 1\n",
+    "\n",
     "while data['weight'][0] - data['weight'][len(data) - 1] > 2 * n * thresh:\n",
-    "#while not data[data['weight'] > (n + thresh * n)].empty:\n",
-    "    exchange = ccxt.binance({\n",
-    "        'options': {'adjustForTimeDifference': True},\n",
-    "        'apiKey': api['apiKey'][0],\n",
-    "        'secret': api['secret'][0]\n",
-    "    })\n",
     "    \n",
     "    order = rebalance_order(data['symbol'][0], data['symbol'][len(data) - 1])\n",
-    "    total_value = data['dollar_value'].sum()\n",
     "    weight_to_move = (data['weight'][0] - data['weight'][len(data) - 1]) / 2\n",
-    "    quantity = round(weight_to_move * total_value / data[data['symbol'] == order[0][:3]]['price'].values[0], 5)\n",
+    "    quantity = round(weight_to_move * data['dollar_value'].sum() / data[data['symbol'] == order[0][:3]]['price'].values[0], 5)\n",
     "    exchange.create_order(order[0], 'market', order[1], quantity)\n",
-    "    print(order[0], order[1], quantity)\n",
     "    \n",
     "    if len(order) > 2:\n",
     "        quantity = round(weight_to_move * total_value / data[data['symbol'] == order[2][:3]]['price'].values[0], 5)\n",
     "        exchange.create_order(order[2], 'market', order[3], quantity)\n",
-    "        print(order[2], order[3], quantity)\n",
     "    \n",
-    "    data = update_coin_data(coins)\n",
-    "    print('Balance after rebalance #', i, '\\n', data)\n",
-    "    i += 1\n",
-    "    if i == 5:\n",
-    "        break\n",
-    "\n",
-    "# Note: base rebalancing on sdev instead of baseline %?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "8/2/2018\n",
-    "\n",
-    "symbol     quantity        price  dollar_value    weight\n",
-    "0    XRP  4064.319000     0.447084   1817.093215  0.262441\n",
-    "1    OMG   305.030000     5.944250   1813.174577  0.261875\n",
-    "2    ETH     4.005586   422.670690   1693.043634  0.244525\n",
-    "3    BTC     0.208670  7670.000000   1600.496906  0.231158"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "math proof-\n",
-    "*  4 coins all 25%\n",
-    "\n",
-    "1. Top coin goes to 35%, bottom two go to 22.5 and 17.5\n",
-    "\n",
-    "    a. take half of 10% gained, move the 5% to 17.5\n",
-    "    \n",
-    "    b. move all 10% gained to 17.5\n",
-    "    \n",
-    "    c. move 7.5 gained to 17.5, 2.5 to 22.5\n",
-    "    \n",
-    "2. Top coin is a certain % more weight than bottom coin\n"
+    "    balance = exchange.fetchBalance()\n",
+    "    data = update_data(coins)\n"
    ]
   }
  ],
